--- a/index.html
+++ b/index.html
@@ -378,18 +378,17 @@ a:focus {outline: none;}
 </head>
 <body>
 <script>
-  alert("HACKED BY OpNep!");
+  alert("HACKED BY Riwaj Parajuli!");
 </script>
 <div style="position: fixed; top: 75px; left: -225px; width: 600px; padding: 10px; font-size: 20px; text-align: center; color: white; font-family: 'trebuchet ms', verdana, arial, sans-serif;transform: rotate(-45deg);transform-origin: 50% 0px;-o-transform: rotate(-45deg); -o-transform-origin: 50% 0px;-moz-transform: rotate(-45deg); -moz-transform-origin: 50% 0px; -webkit-transform: rotate(-45deg); -webkit-transform-origin: 50% 0px; background-color: Transparent; border: 1px solid rgb(170, 170, 170); z-index: 9999; opacity: 0.5;"><a href="https://www.facebook.com/OopsNepal" style="text-decoration:none;color:white;">OpNep (Anonymous Nepal)</a></div>
 <div style="position: fixed; top: 30px; right: -225px; width: 600px; padding: 10px; font-size: 20px; text-align: center; color: white; font-family: 'trebuchet ms', verdana, arial, sans-serif; background-color: Transparent; border: 0px solid rgb(170, 170, 170); z-index: 9999; opacity: 0.5;"><img src="flag.gif"></div>
 <div class="stars">
 <center>
-<h1>OpNep</h1>
+<h1>Riwaj Parajuli</h1>
 </center>
 </div>
 <div class="twinkling">
 <center><br><br><br><br>
-<img src="https://i.ibb.co/ys1ScnF/FB-IMG-15609637347406055.jpg" width="250" /><br><br>
 <div class="container">
 <div class="text"></div>
 </div><br><br><br>
